# poly-calc

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml
libs/catch/: CMakeLists.txt
libs/variant/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: Command.cpp  Command.h  Evaluator.h  Executor.cpp  Executor.h  Main.cpp
src/app/src/commands/: Help.cpp  Help.h  Quit.cpp  Quit.h  Show.cpp  Show.h
src/app/src/expression/: ParseError.h  SimpleEvaluator.cpp  SimpleEvaluator.h
src/app/src/expression/operators/: BiOperator.cpp  BiOperator.h  Derivation.cpp  Derivation.h  Minus.cpp  Minus.h  Multiply.cpp  Multiply.h  Plus.cpp  Plus.h  Power.cpp  Power.h
src/service/: CMakeLists.txt
src/service/include/poly-calc/service/: Command.h  Evaluator.h  Executor.h  Monomial.h  Polynomial.h
src/service/include/poly-calc/service/commands/: Equals.h  Help.h  Quit.h  Show.h
src/service/include/poly-calc/service/expression/: BiOperator.h  ParseError.h  SimpleEvaluator.h
src/service/include/poly-calc/service/expression/operators/: Derivation.h  Minus.h  Multiply.h  Plus.h  Power.h
src/service/include/poly-calc/service/poly/: Monomial.h  Polynomial.h
src/service/src/: Command.cpp  Executor.cpp  Monomial.cpp  Polynomial.cpp
src/service/src/commands/: Equals.cpp  Help.cpp  Quit.cpp  Show.cpp
src/service/src/expression/: SimpleEvaluator.cpp
src/service/src/expression/operators/: BiOperator.cpp  Derivation.cpp  Minus.cpp  Multiply.cpp  Plus.cpp  Power.cpp
src/service/src/poly/: Monomial.cpp  Polynomial.cpp
src/service/test/: MonomialTest.cpp  PolynomialTest.cpp  SimpleEvaluatorTest.cpp
